# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml
gendiff/: __init.py__  __init__.py  data.py  generate_diff.py
gendiff/formats/: format.py
gendiff/formattеrs/: __init__.py  format.py  json.py  plain.py  stylish.py
gendiff/scripts/: diff_builder.py  gendiff.py  generate_diff.py  parser.py
tests/: gen_test.py  gentest.py
tests/test_data/: answer_json.json  answer_plain.txt  answer_stylish.txt
