[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.3",
]
packages = [
  { include = "gendiff" },
]

[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["trun <e.s.trunov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.uv.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
