[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.3",
]
packages = [
  { include = "gendiff" },
]

[project.scripts]
gendiff = "gendiff.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "flake8>=7.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
